--- a/os.org
+++ b/os.org
@@ -361,3 +361,26 @@ menu标签中item标签的主要属性见表\ref{tbl-menu-bar}
 | android:icon            | item显示的图标。                                           |
 | app:showAsAction        | item显示的方式。                                           |
 |-------------------------+------------------------------------------------------------|
+* FreeRTOS
+FreeRTOS是一个迷你操作系统内核的小型嵌入式系统。作为一个轻量级的操作系统，功能包括：任务管理、时间管理、信号量、消息队列、
+内存管理、记录功能等，可基本满足较小系统的需要。 功能和特点:
+- 混合配置选项;
+- 提供一个高层次的信任代码的完整性;
+- 目的是小，简单易用;
+- 以开发C，非常便携代码结构;
+- 支持两项任务和共同例程;
+- 强大的执行跟踪功能;
+- 堆栈溢出检测 ;
+- 没有软件任务的限制数量;
+- 没有软件优先事项的限制数量;
+- 没有施加的限制，优先转让，多个任务可以分配相同的优先权;
+- 队列，二进制信号量，计数信号灯和递归通信和同步的任务 ;
+- Mutexes优先继承权;
+- 免费开发工具;
+- 免费嵌入式软件的源代码;
+- 从一个标准的Windows主机交叉发展;
+** 术语
+- PV操作：P源自于荷兰语parsseren，即英语的pass；V源自于荷兰语verhoog，即英语的increment。P(S)V(S)操作是信号量的两个原子
+  操作，S为信号量semaphore，相当于一个标志，可以代表一个资源，一个事件等；
+
+
