--- a/tool.org
+++ b/tool.org
@@ -7,6 +7,113 @@
 ** 安装
 - gnuserv安装：将emacs目录拷贝后，在系统环境变量中增加HOME键值等于emacs路径(d:\emacs)，即可；
 ** 基本操作
+- 表格\ref{tbl-emacs-inf}总结了平时需要的快捷键、模式、命令等操作；
+  #+caption: emacs使用汇总
+  #+label: tbl-emacs-inf
+  #+attr_latex: placement=[H]
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  | 模式     | 按键      | 函数                           | 功能                             | 备注               |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | C-c a     | org-agenda                     | 进入org模式的agenda              |                    |
+  |          | C-c b     | org-iswitchb                   | 进入org模式的iswitchb            |                    |
+  |          | C-c c     | org-capture                    | 进入org模式的capture             |                    |
+  |          | C-c l     | org-store-link                 | 进入org模式的org-store-link      |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | F9        | emacs-maximize                 | 窗口最大化                       | 实际上延时后最大化 |
+  |          | C-F9      | emacs-normal                   | 窗口大小还原                     |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | C-x 4 4   | split-window-h2v2              | 窗口分成4份，水平2份垂直2份      |                    |
+  |          | C-x 4 3   | split-window-h2v1              | 窗口分成3份，水平2份垂直1份      |                    |
+  |          | C-x 4 5   | split-window-h1v2              | 窗口分成3份，水平1份垂直2份      |                    |
+  |          | M-j       | split-window-rotate            | 窗口顺时针旋转                   |                    |
+  |          | M-S-j     | split-window-hv-turn           | 窗口逆时针旋转                   |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | M-g       | goto-line                      | 跳转到某行                       |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | C-,       | scroll-left                    | 屏幕左移命令                     |                    |
+  |          | C-.       | scroll-right                   | 屏幕右移命令                     |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | F3        | repeat-complex-command         | 重复上一命令                     |                    |
+  |          | C-x z     |                                |                                  |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | F8        | eshell                         | 打开eshell                       |                    |
+  |          | C-F8      | open-eshell-other-buffer       | 在另一个buffer里面打开eshell     |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | C-;       | set-mark-command               | 设置标记起始位置                 | 原来绑定在C-SPC上  |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | F2        | ecb-hide-ecb-windows           | ecb模式窗口隐藏                  |                    |
+  |          | C-F2      | ecb-show-ecb-windows           | ecb模式窗口显示                  |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | M-;       | user-comment-dwim-line         | 代码注释                         |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | F7        | quick-compile                  | 编译                             | 设置编译C          |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | F10       | my-transparent                 | 设置或者取消emacs透明            |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | C-c 1     | org-time-stamp                 | org模式时间戳                    |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | C-c d     | insert-current-date            | 插入当前日期                     |                    |
+  |          | C-c t     | insert-current-time            | 插入当前时间                     |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | C-F1      | manual-entry                   | 进入manual                       |                    |
+  |          | F1        | open-key-info-file             | 进入自定义快捷键帮助             |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          |           | byte-compile-file              | 编译elisp文件                    |                    |
+  |          |           | describe-current-coding-system | 显示当前buffer的编码格式         |                    |
+  |          | C-x RET f |                                | 改变当前buffer的编码格式         |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          | C-x {     |                                | 往左加宽buffer尺寸               |                    |
+  |          | C-x }     |                                | 往右加宽buffer尺寸               |                    |
+  |          | C-x ^     |                                | 往上加高buffer尺寸               |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  | 目录模式 | n         |                                | 向下查看文件                     |                    |
+  | C-x d    | p         |                                | 向上查看文件                     |                    |
+  |          | >         |                                | 向下查看目录                     |                    |
+  |          | <         |                                | 向上查看目录                     |                    |
+  |          | ^         |                                | 返回上一级目录                   |                    |
+  |          | M-(       |                                | 向下查看已标记                   |                    |
+  |          | M-)       |                                | 向上查看已标记                   |                    |
+  |          | g         |                                | 刷新                             |                    |
+  |          | s         |                                | 切换名称/日期排序方式            |                    |
+  |          | i         |                                | 当前窗口下面打开该子目录         |                    |
+  |          | v         |                                | 查看当前文件（当前窗口）         |                    |
+  |          | o         |                                | 查看当前文件（另一窗口）         |                    |
+  |          | y         |                                | 查看当前文件类型                 |                    |
+  |          | 等号      |                                | 比较文件，相当于shell下的diff    |                    |
+  |          | m         |                                | 标记（mark）                     |                    |
+  |          | u         |                                | 取消标记                         |                    |
+  |          | U         |                                | 取消所有标记                     |                    |
+  |          | * /       |                                | 标记所有文件夹                   |                    |
+  |          | * *       |                                | 标记所有可执行文件               |                    |
+  |          | * @       |                                | 标记所有符号链接                 |                    |
+  |          | * c       |                                | 改变标记的符号                   |                    |
+  |          | % m       |                                | 根据正则表达式改变标记文件       |                    |
+  |          | % g       |                                | 根据正则表达式改变标记文件的内容 |                    |
+  |          | d         |                                | 标记为删除                       |                    |
+  |          | ~         |                                | 标记所有备份文件为删除           |                    |
+  |          | #         |                                | 将存盘文件标记为删除             |                    |
+  |          | & d       |                                | 根据正则表达式标记删除           |                    |
+  |          | X         |                                | 执行标记的操作                   |                    |
+  |          | +         |                                | 新建目录                         |                    |
+  |          | C-x C-q   |                                | 将文件列表设置为只读             |                    |
+  |          | D         |                                | 删除文件                         | 标记（m）后的操作  |
+  |          | C         |                                | 拷贝                             | 标记（m）后的操作  |
+  |          | O         |                                | 改变用户                         | 标记（m）后的操作  |
+  |          | G         |                                | 改变群组                         | 标记（m）后的操作  |
+  |          | S         |                                | 符号链接                         | 标记（m）后的操作  |
+  |          | H         |                                | 硬链接                           | 标记（m）后的操作  |
+  |          | Z         |                                | 压缩                             | 标记（m）后的操作  |
+  |          | W         |                                | 复制文件名                       | 标记（m）后的操作  |
+  |          | K         |                                | 删除行，刷新后可恢复             | 标记（m）后的操作  |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+  |          |           | revert-buffer                  | 刷新buffer                       |                    |
+  |          |           | emacs -q                       | 进入emacs默认最小配置            | 启动emacs时使用    |
+  |          |           | eval-current-buffer            | 当前配置立马生效                 |                    |
+  |          |           | rename-buffer                  | 重命名当前buffer                 |                    |
+  |----------+-----------+--------------------------------+----------------------------------+--------------------|
+
+
+
 - 在eshell中使用$PATH$可以输出当前emacs的路径path；
 - 计算器模式1：M-x calc进入，输入"10"回车"d2，这个d2会把窗口中的所有数字显示为二进制形式，所有的数字都会以"2#"开头,以表
   示它们是二进制形式。如果要重新用十进制显示，则输入"d0"即可，同样，也可以用"d8""，"d6"来显示八进制和十六进制的格式。如
