--- a/index.org
+++ b/index.org
@@ -13,11 +13,11 @@
 总结软件开发的一些理论，技巧，编程语言等。
 * [[./hardware.org][硬件]]
 总结硬件中的数字电路、模拟电路、射频、器件、芯片内核等。
-* [[./system.org][操作系统]]
+* [[./os.org][操作系统]]
 总结工作中用到的操作系统，Android、Linux等。
 * [[./tool.org][工具]]
 总结工作中用到的工具，emacs、latex、软件工具等。
-* [[./renovations.org][装修]]
+* [[./decoration.org][装修]]
 介绍一些装修常识和问题点。
 * [[./encyclopedia.org][百科知识]]
 总结工作中接触到的百科知识比如GPS等。
