增加rtos的一些概念

--- a/os.org
+++ b/os.org
@@ -382,5 +382,24 @@ FreeRTOS是一个迷你操作系统内核的小型嵌入式系统。作为一个
 ** 术语
 - PV操作：P源自于荷兰语parsseren，即英语的pass；V源自于荷兰语verhoog，即英语的increment。P(S)V(S)操作是信号量的两个原子
   操作，S为信号量semaphore，相当于一个标志，可以代表一个资源，一个事件等；
+- 变量的非原子操作：更新结构体的多个成员变量，或者是更新的变量其长度超过了架构体系的自然长度(比如，更新一个16位机上的32
+  位变量)均是非原子操作，如果这样的操作被中断，将可能导致数据损坏或者丢失；
+- 函数重入：如果一个函数可以安全的被多个任务调用，或在任务与中断中均可调用，则这个函数是可以重入的；一般每个任务都单独维
+  护自己的栈空间及其自身在内存寄存器组中的值。如果一个函数除访问自己栈空间上分配的数据或是内核寄存器中的数据外，会访问其
+  他任何数据，则这个函数是不可重入的。
+- 临界区：当某资源需要被多个任务访问使用时，此资源叫临界区，开始访问此资源，表示进入临界区；如果要进入临界区，一般安全的
+  做饭是讲所有的中断或者优先级关闭，防止在访问临界区资源时，被打断，并且访问临界区资源的程序必须要尽快结束；
+- 二值信号量：用于同步，可以给某资源配置一个二值信号量，当一个任务要访问某资源时，如果此二值信号量不可用，则该任务不可访
+  问该资源，可以通过在中断中给予(GIVE)此信号量，则此任务就可以获得(TAKE)该信号量，访问该资源，达到同步作用，用于同步的信
+  号量，用完后便丢弃，不再归还；
+- 互斥信号量：用于访问一些具有互斥效果的资源，类似二值信号量，当某任务需要访问某资源时，需要先获得(TAKE)该资源的令牌(信
+  号量)，用完后，再归还(GIVE)该资源的令牌，一个任务只有获得了该资源的令牌后才能访问该资源，否则不允许访问进入阻塞状态，
+  用于互斥的信号量必须归还；
+- 优先级翻转：指两个不同优先级的任务在允许时，低优先级的任务获得了某资源的互斥信号量，并未执行完，此时高优先级的任务也开
+  始运行，并且也要使用该资源，从而获取该资源的互斥信号量，然后此时低优先级的任务并未释放该互斥信号量，则高优先级的任务进
+  入阻塞状态，等待低优先级的任务执行完释放信号量，从而产生了高优先级的任务等待低优先级任务的不合理现象；
+- 死锁：当两个任务都在等待被对方持有的资源时，两个任务都无法继续执行，这种情况被称为死锁；
+- 守护任务：守护任务提供了一个比较好的方法来实现互斥功能，而不用担心会发生优先级翻转和死锁，守护任务是对某个资源具有唯一
+  所有权的任务，只有守护任务才可以直接访问其守护的资源，其他任何任务只能间接的通过守护任务提供访问服务；
 
 
