--- a/sitemap.org
+++ b/sitemap.org
@@ -1,13 +1,13 @@
 #+TITLE: Sitemap
 
-   + [[file:protocol.org][2015-10-26 鍗忚 ]]
-   + [[file:os.org][2015-10-26 鎿嶄綔绯荤粺]]
-   + [[file:index.org][2015-10-23 姣斿厠鏇肩殑鐭ヨ瘑绠＄悊]]
-   + [[file:tool.org][2015-10-22 宸ュ叿]]
-   + [[file:software.org][2015-10-22 杞欢 ]]
-   + [[file:decoration.org][2015-10-22 瑁呬慨鏃ヨ]]
-   + [[file:ml.org][2015-10-22 鏈哄櫒瀛︿範 ]]
-   + [[file:math.org][2015-10-22 鏁板 ]]
-   + [[file:language.org][2015-10-22 澶栬瀛︿範]]
-   + [[file:hardware.org][2015-10-22 纭欢 ]]
-   + [[file:encyclopedia.org][2015-10-22 鐧剧鐭ヨ瘑]]
+   + [[file:protocol.org][2015-10-27 协议 ]]
+   + [[file:os.org][2015-10-26 操作系统]]
+   + [[file:index.org][2015-10-23 比克曼的知识管理]]
+   + [[file:tool.org][2015-10-22 工具]]
+   + [[file:software.org][2015-10-22 软件 ]]
+   + [[file:decoration.org][2015-10-22 装修日记]]
+   + [[file:ml.org][2015-10-22 机器学习 ]]
+   + [[file:math.org][2015-10-22 数学 ]]
+   + [[file:language.org][2015-10-22 外语学习]]
+   + [[file:hardware.org][2015-10-22 硬件 ]]
+   + [[file:encyclopedia.org][2015-10-22 百科知识]]
