增加数字图像处理的基础概念

--- a/index.org
+++ b/index.org
@@ -5,7 +5,7 @@
 
 * [[./math.org][数学]]
 汇总工作中需要用到数学知识。
-* [[./ml.org][机器学习]]
+* [[./algorithm.org][算法]]
 总结各种机器学习,数据挖掘等的理念、工具、算法等。
 * [[./protocol.org][协议]]
 总结工作中遇到的各种协议，包括大族协议，小族协议等。
