增加gps的基本术语

--- a/encyclopedia.org
+++ b/encyclopedia.org
@@ -16,7 +16,15 @@
   面，终点面是本地经线平面,某一点的经度，就是该点所在的经线平面与本初子午线平面间的夹角。
 - 纬度：是个线面角。起点面是赤道平面，线是本地的地面法线。所谓法线，即垂直于参考扁球体表面的线；某地的纬度就是该地的法线
   与赤道平面之间的夹角。纬度数值在0至30度之间的地区称为低纬地区，纬度数值在30至60度之间的地区称为中纬地区，纬度数值在60
-  至90度之间的地区称为高纬地区。  
+  至90度之间的地区称为高纬地区。
+- ECI坐标系：地心惯性坐标系，earth centered intertial，用于描述卫星的位置，坐标系固定不变；
+- ECEF坐标系：地心地球固连坐标系，earth centered，earth fixed，用于描述地面接收器的位置，随着地球自转而旋转，在具体定位
+  时，需要将卫星的ECI坐标系的位置转换成它在ECEF坐标系的位置；
+** 时间系统
+- 国际原子时钟：IAT，international atomic time；
+- 协调世界时钟：UTC，coordinated universal time，互联网使用的网络时间协议(NTP)，获取的时间就是UTC，格式年月日时分秒；
+- GPS时间：GPST，gps time，以IAT时钟为准，时间原点定于1980年1月6日0时；
+- 本地时间：local time, 基于UTC时间，将全球分为24个时区，每个时区的中心为相隔15度经线，第一时区的中心位于子午线；
 ** 经纬度转换
 - 度转度分秒
   如何将度(DDD)：108.90593度换算成“度分秒(DMS)“，东经E 108度54分22.2秒?转换方法是将108.90593整数位不变取108(度),用
