--- a/tool.org
+++ b/tool.org
@@ -233,7 +233,7 @@
 #+end_src
 - 内部链接：只需要在某个需要链接到的地方使用# <<target>>，设置一个标点，再在使用的地方，使用像[[][]]这样的格式去定位标点，
   并给出描述符，或者直接使用快捷键C-c C-l添加该点，比如已经在org-mode标题处设置了标点，然后使用[[][]] 定位过去就是
-  [[org-mode]], 并且可以使用C-c &返回来。
+  [[org-mode]], 并且可以使用C-c &返回来, 使用C-c C-o可以打开标点。
 - 表格：可以使用table-mode，命令table-insert可以插入一个n行n列的表格，table-span-cell可以合并单元格。
 ** python-mode
 - 进入交互python模式：进入某个buffer，M-x python-mode，然后C-c C-z即可进入交互模式，也可以在buffer里面写好程序，在C-c
